[metadata]
name = tb-download
version = 0.0.1
author = Filippo Argiolas
author_email = filippo.argiolas@gmail.com
description = thingsboard timeseries downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fargiolas/tb-download
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    argparse
    pandas
    rich

scripts = scripts/tb-download
